Changed caret color.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,7 @@ body {
 
 .hide { visibility: hidden; }
 .none { display: none; }
-.hideCaret { caret-color: transparent; }
+.greenCaret { caret-color: var(--gruvbox-green); }
 
 
 /*terminal*/
