--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,8 +42,9 @@ body {
     outline: none;
     flex: 75;
     padding: 10px;
-    overflow-y: scroll;
     resize: none;
+    min-height: 100vh;
+    resize:none;
     overflow: hidden;
     line-height: 1.2em;
     border-bottom: 2px solid grey;
@@ -79,3 +80,12 @@ body {
 
 
 
+/*fakeCaret*/
+.fakeCaret {
+    position: absolute;
+    height: 1.2em;
+    width: 0.8em;
+    font-size: 1.7em;
+    background-color: rgba(20, 137, 0, 0.4);
+    font-family: 'Fira Code', monospace;
+}
