Caret like vim for h and l

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,11 @@ body {
 .none { display: none; }
 .greenCaret { caret-color: var(--gruvbox-green); }
 
+::selection {
+  color: var(--gruvbox-background);
+  background: var(--gruvbox-light-green);
+}
+
 
 /*terminal*/
 .text-area {
