Added current file underline in nerdTree.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,10 @@ body {
 }
 .file-on-focus {
     color: var(--gruvbox-light-green);
+    font-weight: bold;
+}
+.current-file {
+    text-decoration: underline;
 }
 
 .folders {
