--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,7 +133,8 @@ body {
     bottom: 3em;
     display: flex;
     flex-direction: row;
-    height: 1.75em
+    height: 1.75em;
+    outline: 5px solid var(--gruvbox-background);
 }
 
 .air-line div {
