--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,6 +76,10 @@ body {
 /*terminal-input*/
 .terminal-input {
     position: absolute;
+    overflow: hidden;
+    outline: none;
+    resize: none;
+    border: none;
     background-color: var(--gruvbox-background);
     font-size: 1.5em;
     font-family: 'Fira Code', monospace;
